alignment of charts fixed

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,6 @@ path.domain{
 }
 
 #roamHist {
-	float: left;
 }
 
 #header li{
